# AbyssBSD

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  GOVERNANCE.md  LICENSE  ONBOARDING.md  README.md  STATUS.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/abyss-bootstrap/: Cargo.toml
crates/abyss-bootstrap/src/: freebsd.rs  lib.rs
crates/abyss-bootstrap/tests/: boot.rs  spawn.rs
crates/abyss-broker/: Cargo.toml
crates/abyss-broker/src/: boot.rs  catalogue.rs  graph.rs  lib.rs  manifest.rs  session.rs  spawn.rs  spawnable.rs  supervisor.rs
crates/abyss-bundle/: Cargo.toml
crates/abyss-bundle/src/: lib.rs
crates/abyss-cap/: Cargo.toml
crates/abyss-cap/src/: lib.rs  rights.rs  wire.rs
crates/abyss-cap/tests/: harness.rs  ipc.rs
crates/abyss-font/: Cargo.toml  build.rs
crates/abyss-font/c/: font_shim.c
crates/abyss-font/src/: ffi.rs  lib.rs
crates/abyss-font/tests/: font.rs
crates/abyss-log/: Cargo.toml
crates/abyss-log/src/: lib.rs
crates/abyss-looper/: Cargo.toml
crates/abyss-looper/src/: block.rs  channel.rs  error.rs  event_source.rs  handler.rs  lib.rs  looper.rs  responder.rs
crates/abyss-looper/tests/: basic.rs
crates/abyss-msg/: Cargo.toml
crates/abyss-msg-derive/: Cargo.toml
crates/abyss-msg-derive/src/: lib.rs
crates/abyss-msg-derive/tests/: derive.rs
crates/abyss-msg/src/: cursor.rs  envelope.rs  error.rs  lib.rs  method.rs  value.rs  wire.rs
crates/abyss-msg/tests/: decode_robustness.rs  golden.rs  roundtrip.rs
crates/abyss-msg/tests/common/: mod.rs
crates/abyss-render/: Cargo.toml
crates/abyss-render/src/: backend.rs  canvas.rs  color.rs  cpu.rs  geometry.rs  lib.rs  paint.rs  path.rs  pixmap.rs  text.rs
crates/abyss-render/tests/: render.rs  text.rs
crates/abyss-test-support/: Cargo.toml
crates/abyss-test-support/src/: lib.rs
crates/abyss-toolkit/: Cargo.toml
crates/abyss-toolkit/src/: event.rs  lib.rs  theme.rs  tree.rs  widget.rs  widgets.rs
crates/abyss-toolkit/tests/: toolkit.rs
crates/abyss-transport/: Cargo.toml  build.rs
crates/abyss-transport/c/: cmsg_shim.c  kqueue_shim.c
crates/abyss-transport/src/: frame.rs  freebsd.rs  lib.rs
crates/abyss-transport/src/freebsd/: async_channel.rs  connection.rs  reactor.rs
crates/abyss-wm-layout/: Cargo.toml
crates/abyss-wm-layout/src/: engine.rs  lib.rs  result.rs  tree.rs  types.rs
docs/: BACKLOG.md  DESIGN.md  ROADMAP.md  TECH-DEBT.md  acceleration.md  dependency-allowlist.md  public-api.md
docs/design/: api-evolution.md  broker-and-transport.md  drm-kms-bringup.md  hypermedia-browser.md  looper-framework.md  toolkit.md  window-management.md  wire-format.md
docs/interfaces/: broker.md  device-monitor.md  display.md  input.md  power.md  scripting.md  settings.md  shell.md  toolkit.md
interfaces/: README.md  audio.md  display.md  networking.md  notification.md  scripting.md  session-lock.md  toolkit.md
rfcs/: 0000-template.md
site/: architecture.html  components.html  design.html  ecosystem.html  governance.html  index.html  interfaces.html  roadmap.html  style.css
sys/drm-sys/: Cargo.toml  build.rs
sys/drm-sys/c/: drm_shim.c
sys/drm-sys/src/: freebsd.rs  lib.rs
sys/freebsd-capsicum-sys/: Cargo.toml  build.rs
sys/freebsd-capsicum-sys/c/: capsicum_shim.c
sys/freebsd-capsicum-sys/src/: freebsd.rs  lib.rs
sys/freebsd-jail-sys/: Cargo.toml
sys/freebsd-jail-sys/src/: freebsd.rs  lib.rs
sys/freebsd-libcap-dns-sys/: Cargo.toml
sys/freebsd-libcap-dns-sys/src/: freebsd.rs  lib.rs
sys/freebsd-libcasper-sys/: Cargo.toml
sys/freebsd-libcasper-sys/src/: freebsd.rs  lib.rs
sys/freebsd-procdesc-sys/: Cargo.toml  build.rs
sys/freebsd-procdesc-sys/c/: procdesc_shim.c
sys/freebsd-procdesc-sys/src/: freebsd.rs  lib.rs
tools/vm/: .gitignore  README.md  console.py  vm.sh
tools/vm/cloud-init/: meta-data  user-data
xtask/: Cargo.toml
xtask/src/: main.rs
