# AbyssBSD — Cargo workspace root.
#
# The AbyssBSD layer is a single workspace. Crates are added phase by phase
# (docs/ROADMAP.md §3, §4): crates/ holds the AbyssBSD layer, sys/ the
# FreeBSD FFI crates (added at Phase 4), xtask the build & CI harness.

[workspace]
resolver = "3"
members = ["xtask", "crates/*", "sys/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
# MSRV — the minimum supported Rust, which cargo enforces. Kept at or below
# what FreeBSD packages (`pkg install rust`), since FreeBSD is AbyssBSD's
# base OS and the project must build with its toolchain. This is distinct
# from rust-toolchain.toml, which pins the exact, newer toolchain the macOS
# development bed uses.
rust-version = "1.94.0"
license = "BSD-2-Clause"

# Unsafe is permitted, but only as a deliberate per-crate `#![allow(...)]`
# opt-in — FFI and the renderer will need it; nothing else should reach for
# it silently (DESIGN.md §3.5, §10.6).
[workspace.lints.rust]
unsafe_code = "warn"
