[package]
name = "abyss-broker"
description = "AbyssBSD broker — the root of authority: manifests, the authority graph, jailed spawn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# The spawn and session modules are FreeBSD-only; their dependencies are
# pulled only there, so the host slice (manifest, graph) stays minimal on
# the macOS dev bed.
[target.'cfg(target_os = "freebsd")'.dependencies]
abyss-msg = { path = "../abyss-msg" }
abyss-bundle = { path = "../abyss-bundle" }
abyss-log = { path = "../abyss-log" }
abyss-transport = { path = "../abyss-transport" }
freebsd-capsicum-sys = { path = "../../sys/freebsd-capsicum-sys" }
freebsd-jail-sys = { path = "../../sys/freebsd-jail-sys" }
freebsd-procdesc-sys = { path = "../../sys/freebsd-procdesc-sys" }

[lints]
workspace = true
