[package]
name = "abyss-cap"
description = "AbyssBSD capability layer — typed, rights-bearing ring endpoints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
abyss-looper = { path = "../abyss-looper" }
abyss-msg = { path = "../abyss-msg" }

# The IPC backend (broker-and-transport.md §2.8) is FreeBSD-only — the
# `SOCK_SEQPACKET` transport — so it is pulled only there.
[target.'cfg(target_os = "freebsd")'.dependencies]
abyss-transport = { path = "../abyss-transport" }

# The harness and IPC tests derive Wire / Method / Request on message enums.
[dev-dependencies]
abyss-msg-derive = { path = "../abyss-msg-derive" }

[lints]
workspace = true
