[package]
name = "abyss-test-support"
description = "AbyssBSD workspace test support — a real system font for tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
abyss-font = { path = "../abyss-font" }

[lints]
workspace = true
