[package]
name = "abyss-toolkit"
description = "AbyssBSD Interface Kit — the retained view tree, layout, and widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
abyss-render = { path = "../abyss-render" }

[dev-dependencies]
abyss-test-support = { path = "../abyss-test-support" }

[lints]
workspace = true
