[package]
name = "freebsd-procdesc-sys"
description = "FreeBSD process-descriptor FFI — pdfork, pdkill, pdgetpid (broker-and-transport.md §6)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# pdfork/pdkill/pdgetpid are ordinary libc functions — a direct `extern`
# block, no C shim. FreeBSD only; an empty crate on every other host.

[lints]
workspace = true
