[package]
name = "freebsd-procdesc-sys"
description = "FreeBSD process-descriptor FFI — pdfork-based spawn and pdkill (broker-and-transport.md §6)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# build.rs compiles c/procdesc_shim.c with the system toolchain (cc, ar):
# the pdfork-then-execve must run in C so no Rust executes in the forked
# child (§5.3, §6). The build is a no-op on every non-FreeBSD host.

[dev-dependencies]
# The jailed-spawn test creates a real jail for the child to attach to.
freebsd-jail-sys = { path = "../freebsd-jail-sys" }

[lints]
workspace = true
